--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,21 +1,5 @@
-@import "_mixins.scss";
+@import "base";
 
-// html {
-//   font-size: 62.5%;
-// }
+@import "mixins";
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-// body {
-//   font-size: 16px;
-//     font-family: ;
-// }
-
-// // adding media queries
-// @include respond(992px) {
-//     //codes to happen
-// }
+@import "typography";
