--- a/_with-bs/sass/_base.scss
+++ b/_with-bs/sass/_base.scss
@@ -30,6 +30,11 @@ a {
   color: inherit;
 }
 
+// .case {
+//   max-width: 80%;
+//   margin: 0 auto;
+// }
+
 // ::selection {
 //   background-color: #fff;
 //   color: #000;
