--- a/_with-bs/css/main.css
+++ b/_with-bs/css/main.css
@@ -7,6 +7,28 @@
           box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
+@media only screen and (max-width: 767px) {
+  html {
+    font-size: 56.25%;
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  html {
+    font-size: 50%;
+  }
+}
+
+@media only screen and (min-width: 1201px) {
+  html {
+    font-size: 75%;
+  }
+}
+
 ul > li {
   list-style: none;
 }
