--- a/7-1 Architechture/main.scss
+++ b/7-1 Architechture/main.scss
@@ -10,7 +10,8 @@
 @import "components/buttons";
 
 @import "pages/home";
-@import "layout/header.scss";
+
+@import "layout/header";
 
 // @import  "vendors/";
 // @import "themes";
